Allow specifying more volume names than just one matching oscp_project

--- a/playbooks/create_oscp_volume_definitions/tasks/templates/pv.j2
+++ b/playbooks/create_oscp_volume_definitions/tasks/templates/pv.j2
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: "{{ oscp_project }}-volume"
+  name: "{{ volume_name }}-volume"
   namespace: "{{ oscp_project }}"
 spec:
   capacity:
