--- a/playbooks/create_oscp_volume_definitions/tasks/templates/pvc.j2
+++ b/playbooks/create_oscp_volume_definitions/tasks/templates/pvc.j2
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: "{{ oscp_project }}-claim" 
+  name: "{{ volume_name }}-claim" 
   namespace: "{{ oscp_project }}"
 spec:
   accessModes:
