--- a/playbooks/create_oscp_volume_definitions/tasks/templates/pvc.j2
+++ b/playbooks/create_oscp_volume_definitions/tasks/templates/pvc.j2
@@ -9,4 +9,4 @@ spec:
   resources:
     requests:
       storage: "{{ logical_volume_size }}m"
-  storageClassName: slow
+  storageClassName: glusterfs
