gitlab-runner: Fix machine key name in template

--- a/roles/gitlab-runner/templates/config.toml.j2
+++ b/roles/gitlab-runner/templates/config.toml.j2
@@ -20,7 +20,7 @@ executor = {{ runner['executor'] }}
   {% endif %}
   {% if 'machine' in runner %}
 [runners.machine]
-    {% for k,v in runner['docker'].items() %}
+    {% for k,v in runner['machine'].items() %}
 {{ k }} = {{ v }}
     {% endfor %}
   {% endif %}
