gitlab-runner: Land custom "flatpak" key which inlines seccomp configuration
Runner is unable to load it from external file[1].

[1] https://gitlab.com/gitlab-org/gitlab-runner/issues/2597

--- a/roles/gitlab-runner/templates/config.toml.j2
+++ b/roles/gitlab-runner/templates/config.toml.j2
@@ -15,7 +15,11 @@ executor = "{{ runner['executor'] }}"
   {% if 'docker' in runner %}
 [runners.docker]
     {% for k,v in runner['docker'].items() %}
+      {% if k == "flatpak" and v == true %}
+security_opt = ["apparmor:unconfined", 'seccomp:{% include "./files/flatpak-docker-seccomp.json" %}']
+      {% else %}
 {{ k }} = {{ v }}
+      {% endif %}
     {% endfor %}
   {% endif %}
   {% if 'machine' in runner %}
