--- a/roles/nrpe/templates/nrpe.cfg.j2
+++ b/roles/nrpe/templates/nrpe.cfg.j2
@@ -3,7 +3,7 @@ pid_file=/var/run/nrpe/nrpe.pid
 server_port=5666
 nrpe_user=nrpe
 nrpe_group=nrpe
-allowed_hosts="{{ nrpe_allowed_hosts | join(',') }}"
+allowed_hosts={{ nrpe_allowed_hosts | join(',') }}
 dont_blame_nrpe=0
 debug=0
 command_timeout=60
