Configure Ceph checks to use the token

--- a/roles/nrpe/templates/custom/check_ceph_osd.cfg.j2
+++ b/roles/nrpe/templates/custom/check_ceph_osd.cfg.j2
@@ -1,1 +1,1 @@
-command[check_ceph_osd]=/usr/lib64/nagios/plugins/custom/check_ceph_osd -H {{ inventory_hostname }}
+command[check_ceph_osd]=/usr/lib64/nagios/plugins/custom/check_ceph_osd --id nagios -H {{ inventory_hostname }}
