--- a/roles/nrpe/templates/custom/check_ceph_df.cfg.j2
+++ b/roles/nrpe/templates/custom/check_ceph_df.cfg.j2
@@ -1,1 +1,1 @@
-command[check_ceph_df]=/usr/lib64/nagios/plugins/custom/check_ceph_df -W 80 -C 90
+command[check_ceph_df]=/usr/lib64/nagios/plugins/custom/check_ceph_df --id nagios -W 80 -C 90
