--- a/roles/nrpe/templates/custom/check_ceph_health.cfg.j2
+++ b/roles/nrpe/templates/custom/check_ceph_health.cfg.j2
@@ -1,1 +1,1 @@
-command[check_ceph_health]=/usr/lib64/nagios/plugins/custom/check_ceph_health
+command[check_ceph_health]=/usr/lib64/nagios/plugins/custom/check_ceph_health --id nagios
