--- a/roles/nrpe/templates/custom/check_ceph_mgr.cfg.j2
+++ b/roles/nrpe/templates/custom/check_ceph_mgr.cfg.j2
@@ -1,1 +1,1 @@
-command[check_ceph_mgr]=/usr/lib64/nagios/plugins/custom/check_ceph_mgr
+command[check_ceph_mgr]=/usr/lib64/nagios/plugins/check_openmanage -H localhost
