--- a/roles/nrpe/templates/custom/check_ceph_mon.cfg.j2
+++ b/roles/nrpe/templates/custom/check_ceph_mon.cfg.j2
@@ -1,1 +1,1 @@
-command[check_ceph_mon]=/usr/lib64/nagios/plugins/custom/check_ceph_mon -I {{ inventory_hostname_short }}
+command[check_ceph_mon]=/usr/lib64/nagios/plugins/custom/check_ceph_mon --id nagios -I {{ inventory_hostname_short }}
