Use podman profile for Docker to allow buildah to work

--- a/roles/gitlab-runner/templates/config.toml.j2
+++ b/roles/gitlab-runner/templates/config.toml.j2
@@ -14,13 +14,14 @@ token = "{{ runner['token'] }}"
 executor = "{{ runner['executor'] }}"
   {% if 'docker' in runner %}
 [runners.docker]
-    {% for k,v in runner['docker'].items() %}
-      {% if k == "flatpak" and v == true %}
-security_opt = ["apparmor:unconfined", 'seccomp:{% include "./files/flatpak-docker-seccomp.json" %}']
-      {% else %}
+    {% for k,v in runner['docker'].items() if k != "flatpak" %}
 {{ k }} = {{ v }}
-      {% endif %}
     {% endfor %}
+    {% if "flatpak" in runner['docker'].items() %}
+security_opt = ["apparmor:unconfined", 'seccomp:{% include "./files/flatpak-docker-seccomp.json" %}']
+    {% else %}
+security_opt = ["apparmor:unconfined", 'seccomp:{% include "./files/buildah-docker-seccomp.json" %}']
+    {% endif %}
   {% endif %}
   {% if 'machine' in runner %}
 [runners.machine]
