Drop redundant entries from /etc/hosts now that DNS properly handles all entries

--- a/roles/base_network/templates/hosts.j2
+++ b/roles/base_network/templates/hosts.j2
@@ -3,41 +3,37 @@
 127.0.0.1		localhost.localdomain localhost
 ::1		        localhost6.localdomain6 localhost6
 
-172.31.2.1               scale.gnome.org scale-back
-172.31.2.2               gesture.gnome.org gesture-back
-172.31.2.5               nsd02.gnome.org nsd02-back
-172.31.2.6               nsd03.gnome.org nsd03-back
-172.31.2.7               unbound02.gnome.org unbound02-back
-172.31.2.9               view.gnome.org view-back
-172.31.2.19              oscp-router01.gnome.org oscp-router01-back
-172.31.2.16              oscp-router02.gnome.org oscp-router02-back
-172.31.2.12              oscp-master01.gnome.org oscp-master01-back
-172.31.2.13              oscp-master02.gnome.org oscp-master02-back
-172.31.2.14              oscp-node01.gnome.org oscp-node01-back
-172.31.2.15              oscp-node02.gnome.org oscp-node02-back
-172.31.2.17              oscp-node03.gnome.org oscp-node03-back
-172.31.2.18              oscp-node04.gnome.org oscp-node04-back
-172.31.2.22              oscp-node05.gnome.org oscp-node05-back
-172.31.2.41              oscp-node06.gnome.org oscp-node06-back
-172.31.2.43              oscp-node07.gnome.org oscp-node07-back
-172.31.2.42              oscp-router03.gnome.org oscp-router03-back
-172.31.2.20              oscp-master03.gnome.org oscp-master03-back
-172.31.2.21              flowbox.gnome.org flowbox-back
-172.31.2.23              master.gnome.org master-back 
-172.31.2.24              ceph01.gnome.org ceph01-back 
-172.31.2.25              ceph02.gnome.org ceph02-back 
-172.31.2.26              ceph03.gnome.org ceph03-back 
-172.31.2.27              nsd04.gnome.org nsd04-back 
-172.31.2.28              bastion.gnome.org bastion-back
-172.31.2.29              unbound01.gnome.org unbound01-back
-172.31.2.30              nsd01.gnome.org nsd01-back
-172.31.2.31              puppetmaster01.gnome.org puppetmaster01-back
-172.31.2.32              puppetmaster02.gnome.org puppetmaster02-back
-172.31.2.33              account.gnome.org account-back
-172.31.2.34              splunk01.gnome.org splunk01-back
-172.31.2.35              proxy01.gnome.org proxy01-back
-172.31.2.36              restaurant.gnome.org restaurant-back
-172.31.2.37              palette.gnome.org palette-back log01-back
-172.31.2.38              bugzilla.gnome.org bugzilla-back
-172.31.2.39              gitlab.gnome.org gitlab-back
-172.31.2.40              gbm-builder.gnome.org gbm-builder-back
+172.31.2.1           scale-back
+172.31.2.2           gesture-back
+172.31.2.5           nsd02-back
+172.31.2.9           view-back
+172.31.2.19          oscp-router01-back
+172.31.2.16          oscp-router02-back
+172.31.2.12          oscp-master01-back
+172.31.2.13          oscp-master02-back
+172.31.2.14          oscp-node01-back
+172.31.2.15          oscp-node02-back
+172.31.2.17          oscp-node03-back
+172.31.2.18          oscp-node04-back
+172.31.2.22          oscp-node05-back
+172.31.2.41          oscp-node06-back
+172.31.2.43          oscp-node07-back
+172.31.2.42          oscp-router03-back
+172.31.2.20          oscp-master03-back
+172.31.2.21          flowbox-back
+172.31.2.23          master-back 
+172.31.2.24          ceph01-back 
+172.31.2.25          ceph02-back 
+172.31.2.26          ceph03-back 
+172.31.2.28          bastion-back
+172.31.2.30          nsd01-back
+172.31.2.31          puppetmaster01-back
+172.31.2.32          puppetmaster02-back
+172.31.2.33          account-back
+172.31.2.34          splunk01-back
+172.31.2.35          proxy01-back
+172.31.2.36          restaurant-back
+172.31.2.37          palette-back log01-back
+172.31.2.38          bugzilla-back
+172.31.2.39          gitlab-back
+172.31.2.40          gbm-builder-back
