--- a/roles/prometheus/templates/alerting.rules.j2
+++ b/roles/prometheus/templates/alerting.rules.j2
@@ -24,3 +24,7 @@ groups:
     expr: (node_memory_MemTotal_bytes - node_memory_MemAvailable_bytes) / node_memory_MemTotal_bytes > 0.8
     annotations:
       summary: "{% raw %}Instance {{ $labels.instance }} has less than 20% of RAM available{% endraw %}"
+  - alert: High disk usage
+    expr: (node_filesystem_size_bytes - node_filesystem_avail_bytes) /  node_filesystem_size_bytes > 0.9
+    annotations:
+      summary: "{% raw %}Instance {{ $labels.instance }} has less than 10% of free space available on {{ $labels.mountpoint }}{% endraw %}"
