--- a/roles/haproxy-int/templates/keepalived.conf.j2
+++ b/roles/haproxy-int/templates/keepalived.conf.j2
@@ -10,9 +10,9 @@ vrrp_instance VI_1 {
   virtual_router_id 51
   priority {{ keepalived_priority }}
   virtual_ipaddress {
-{%- for ipaddr in keepalived_virtual_ipaddresses -%}
-    {% ipaddr %}
-{%- endfor -%}
+{% for ipaddr in keepalived_virtual_ipaddresses %}
+    {{ ipaddr }}
+{% endfor %}
   }
   track_script {
     chk_haproxy
