haproxy-int: Store oiddir on postgresql volume

--- a/roles/haproxy-int/templates/pgpool.conf.j2
+++ b/roles/haproxy-int/templates/pgpool.conf.j2
@@ -95,3 +95,4 @@ relcache_query_target = master
 
 memory_cache_enabled = on
 memqcache_method = shmem
+memqcache_oiddir = '/var/opt/rh/rh-postgresql12/lib/pgsql/oiddir'
