Revert "haproxy-int: Use VIP for pgpool-II address"
This reverts commit cec557262b5f9f0a752163f2ba311b6bb2924909.

--- a/roles/haproxy-int/templates/haproxy.cfg.j2
+++ b/roles/haproxy-int/templates/haproxy.cfg.j2
@@ -33,5 +33,6 @@ listen galera 0.0.0.0:3307
 listen pgpool 0.0.0.0:5434
     balance leastconn
 
-    server vip 172.31.2.250:5433 check inter 5s rise 3 fall 3
-    server gesture 172.31.2.2:5432 check inter 5s rise 3 fall 3 backup
+    server scale 172.31.2.1:5433 check inter 5s rise 3 fall 3
+    server gesture 172.31.2.2:5433 check inter 5s rise 3 fall 3
+    server gesture-psql 172.31.2.2:5432 check inter 5s rise 3 fall 3 backup
