prometheus: Monitor OSUOSL production servers

--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -26,7 +26,7 @@ scrape_configs:
       - vpn.{{ host }}:9100
 {% endfor %}
       labels:
-        role: {{ hostgroup }}
+        hostgroup: {{ hostgroup }}
 {% endfor %}
     - targets:
 {% for target in prometheus_static_targets %}
