prometheus: Scrap Rocket.Chat exporter via HTTPS

--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -33,6 +33,14 @@ scrape_configs:
       - {{ target }}
 {% endfor %}
 
+  - job_name: 'https'
+    scheme: https
+    static_configs:
+    - targets:
+{% for target in prometheus_https_targets %}
+      - {{ target }}
+{% endfor %}
+
     relabel_configs:
     - source_labels: [ __address__ ]
       target_label: instance
