--- a/roles/haproxy-int/templates/haproxy.cfg.j2
+++ b/roles/haproxy-int/templates/haproxy.cfg.j2
@@ -25,10 +25,10 @@ listen galera 0.0.0.0:3307
     balance leastconn
     timeout client 3h
     timeout server 3h
-    option httpchk
+    option tcpka
 
-    server scale 172.31.2.1:3306 check port 9200 inter 5s rise 3 fall 3
-    server gesture 172.31.2.2:3306 check port 9200 inter 5s rise 3 fall 3
+    server scale 172.31.2.1:3306 check inter 5s rise 3 fall 3
+    server gesture 172.31.2.2:3306 check inter 5s rise 3 fall 3
 
 listen pgpool 0.0.0.0:5434
     server vip 172.31.2.250:5433 check inter 5s rise 3 fall 3
