--- a/roles/haproxy-int/templates/haproxy.cfg.j2
+++ b/roles/haproxy-int/templates/haproxy.cfg.j2
@@ -34,5 +34,5 @@ listen pgpool 0.0.0.0:5434
     server vip 172.31.2.250:5433 check inter 5s rise 3 fall 3
     server gesture 172.31.2.2:5432 check inter 5s rise 3 fall 3 backup
 
-listen pgbouncer 0.0.0.0:5435
+listen postgres 0.0.0.0:5435
     server gesture 172.31.2.2:5432 check inter 5s rise 3 fall 3
