--- a/roles/bigbluebutton/templates/greenlight/env.j2
+++ b/roles/bigbluebutton/templates/greenlight/env.j2
@@ -79,6 +79,7 @@ LDAP_BASE={{ bbb_greenlight_ldap.base | default('') }}
 LDAP_BIND_DN={{ bbb_greenlight_ldap.bind_dn | default('') }}
 LDAP_PASSWORD={{ bbb_greenlight_ldap.password | default('') }}
 LDAP_ROLE_FIELD={{ bbb_greenlight_ldap.role_field | default('') }}
+LDAP_AUTH={{ bbb_greenlight_ldap.auth | default('') }}
 
 # Set this to true if you want GreenLight to support user signup and login without
 # Omniauth. For more information, see:
@@ -126,7 +127,7 @@ SMTP_AUTH={{ bbb_greenlight_smtp.auth | default('') }}
 SMTP_STARTTLS_AUTO={{ bbb_greenlight_smtp.starttls_auto | default('') }}
 
 # Specify the email address that all mail is sent from
-SMTP_SENDER={{ bbb_greenlight_smtp.sender | default('bbb@{{ bbb_hostname }}') }}
+SMTP_SENDER={{ inventory_hostname }}
 
 # Prefix for the applications root URL.
 # Useful for deploying the application to a subdirectory, which is highly recommended
