--- a/roles/prometheus/templates/alerting.rules.j2
+++ b/roles/prometheus/templates/alerting.rules.j2
@@ -44,3 +44,8 @@ groups:
     for: 15m
     annotations:
       summary: "{% raw %}BigBlueButton on {{ $labels.instance }} is down{% endraw %}"
+  - alert: OpenVPN certificate expires within 10 days
+    expr: probe_ssl_earliest_cert_expiry - time() < 86400 * 10
+    for: 15m
+    annotations:
+      summary: "{% raw %}OpenVPN certificate used for {{ $labels.instance }} expires within 10 days{% endraw %}"
