bbb: Increase number of Puma workers to 5

--- a/roles/bigbluebutton/templates/greenlight/env.j2
+++ b/roles/bigbluebutton/templates/greenlight/env.j2
@@ -246,3 +246,6 @@ DB_PASSWORD={{ bbb_greenlight_db_password }}
 #   invite - For invite only registration
 #   approval - For approve/decline registration
 DEFAULT_REGISTRATION={{ bbb_greenlight_default_registration | default('open') }}
+
+# Number of workers for Puma server
+WEB_CONCURRENCY=5
