--- a/roles/prometheus/templates/alerting.rules.j2
+++ b/roles/prometheus/templates/alerting.rules.j2
@@ -45,7 +45,7 @@ groups:
     annotations:
       summary: "{% raw %}BigBlueButton on {{ $labels.instance }} is down{% endraw %}"
   - alert: OpenVPN certificate expires within 10 days
-    expr: probe_ssl_earliest_cert_expiry - time() < 86400 * 10
+    expr: openvpn_cert_not_after - time() < 86400 * 10
     for: 15m
     annotations:
       summary: "{% raw %}OpenVPN certificate used for {{ $labels.instance }} expires within 10 days{% endraw %}"
