--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -60,10 +60,24 @@ scrape_configs:
     - targets:
       - meet.gnome.org:9688
 
-    relabel_configs:
+  - job_name: 'openshift-node-exporter'
+    scheme: https
+    honor_labels: true
+    bearer_token: {{ prometheus_openshift_token }}
+    metrics_path: '/federate'
+    params:
+      'match[]':
+      - '{job="node-exporter"}'
+    static_configs:
+    - targets:
+      - prometheus-k8s-openshift-monitoring.openshift.gnome.org
+    metric_relabel_configs:
+    - source_labels: [ prometheus_replica ]
+      regex: prometheus-k8s-1
+      action: drop
+{% for host in groups['oscp-all'] %}
     - source_labels: [ __address__ ]
       target_label: instance
-      regex: (.*):9100
-    - source_labels: [ __address__ ]
-      target_label: instance
-      regex: vpn.(.*):9100
+      regex: {{ hostvars[host].ansible_eth1['ipv4']['address'] }}:9100
+      replacement: {{ host }}
+{% endfor %}
