--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -18,7 +18,7 @@ scrape_configs:
     - targets:
       - 127.0.0.1:9090
 
-  - job_name: 'node'
+  - job_name: 'node-exporter'
     static_configs:
 {% for hostgroup in prometheus_node_hostgroups %}
     - targets:
@@ -75,6 +75,10 @@ scrape_configs:
     - source_labels: [ prometheus_replica ]
       regex: prometheus-k8s-1
       action: drop
+      target_label: job
+    - source_labels: [ job ]
+      regex: node-exporter
+      replacement: node
 {% for host in groups['oscp-all'] %}
     - source_labels: [ __address__ ]
       target_label: instance
