--- a/roles/prometheus/templates/alerting.rules.j2
+++ b/roles/prometheus/templates/alerting.rules.j2
@@ -44,13 +44,8 @@ groups:
     for: 15m
     annotations:
       summary: "{% raw %}BigBlueButton on {{ $labels.instance }} is down{% endraw %}"
-  - alert: OpenVPN certificate expires within 10 days
-    expr: openvpn_cert_not_after - time() < 86400 * 10
-    for: 15m
-    annotations:
-      summary: "{% raw %}OpenVPN certificate used for {{ $labels.instance }} expires within 10 days{% endraw %}"
   - alert: RAID disk failure
-    expr: 'node_md_disks{instance="meet.gnome.org:9100",job="node",state="failed"} > 0'
+    expr: 'node_md_disks{instance="bbb.gnome.org:9100",job="node",state="failed"} > 0'
     for: 5m
     annotations:
      summary: "{% raw %}At least one device in RAID array on {{ $labels.instance }} has failed {% endraw %}"
