--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -18,7 +18,7 @@ scrape_configs:
     - targets:
       - 127.0.0.1:9090
 
-  - job_name: 'node-exporter'
+  - job_name: 'node'
     static_configs:
 {% for hostgroup in prometheus_node_hostgroups %}
     - targets:
@@ -76,12 +76,12 @@ scrape_configs:
     - source_labels: [ prometheus_replica ]
       regex: prometheus-k8s-1
       action: drop
-      target_label: job
     - source_labels: [ job ]
+      target_label: job
       regex: node-exporter
       replacement: node
 {% for host in groups['oscp-all'] %}
-    - source_labels: [ __address__ ]
+    - source_labels: [ instance ]
       target_label: instance
       regex: {{ hostvars[host].ansible_eth1['ipv4']['address'] }}:9100
       replacement: {{ host }}
