Change confgit branch to main

--- a/roles/lorry/templates/webapp.conf.j2
+++ b/roles/lorry/templates/webapp.conf.j2
@@ -11,6 +11,7 @@ debug-port = 12765
 templates = /usr/local/share/lorry-controller/templates
 static-files = /usr/local/share/lorry-controller/static
 confgit-url = {{ lorry.config_repo }}
+confgit-branch = main
 publish-failures = yes
 git-server-type = local
 
