Use SSH credentials instead of gitlab token for lorry mirroring.
This also includes a script for automatically setting gitlab's SSH
public key, but it's not called as part of a deployment.

Co-authored-by: Jonathan Maw <jonathan.maw@codethink.co.uk>

--- a/roles/lorry/templates/lorry-docker-compose.service.j2
+++ b/roles/lorry/templates/lorry-docker-compose.service.j2
@@ -4,6 +4,8 @@ Requires=docker.service
 After=docker.service
 
 [Service]
+Environment="LORRY_SSH_KEY={{ lorry.ssh_key | replace('\n', '\\n')  }}"
+Environment=LORRY_SSH_KNOWN_HOSTS={{ lorry.gitlab_domain }}
 Type=oneshot
 RemainAfterExit=yes
 WorkingDirectory={{ lorry_data_dir }}
