Forward gitlab metrics over to our main prometheus instance

--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -146,3 +146,36 @@ scrape_configs:
         target_label: instance
       - target_label: __address__
         replacement: fosshost.gnome.org:9116
+
+  - job_name: gitlab_redis
+    static_configs:
+      - targets:
+        - gitlab.gnome.org:9121
+  - job_name: gitlab_postgres
+    static_configs:
+      - targets:
+        - gitlab.gnome.org:9187
+  - job_name: gitlab_workhorse
+    static_configs:
+      - targets:
+        - gitlab.gnome.org:9229
+  - job_name: gitlab_rails
+    metrics_path: "/-/metrics"
+    scheme: https
+    static_configs:
+      - targets:
+        - gitlab.gnome.org
+  - job_name: gitlab_exporter_database
+    metrics_path: "/database"
+    static_configs:
+      - targets:
+        - gitlab.gnome.org:9168
+  - job_name: gitlab_exporter_sidekiq
+    metrics_path: "/sidekiq"
+    static_configs:
+      - targets:
+        - gitlab.gnome.org:9168
+  - job_name: gitlab_gitaly
+    static_configs:
+      - targets:
+        - gitlab.gnome.org:9236
