prometheus: Use bbb-exporter hosted on OCP4

--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -59,7 +59,7 @@ scrape_configs:
     scheme: https
     static_configs:
     - targets:
-      - bbb-exporter.openshift.gnome.org
+      - bbb-exporter.apps.openshift4.gnome.org
 
   - job_name: 'openshift-node-exporter'
     scheme: https
