--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -180,3 +180,10 @@ scrape_configs:
       target_label: job
       regex: kube-state-metrics
       replacement: openshift4-kube-state-metrics
+
+  - job_name: openshift4-postgresql
+    scheme: https
+    static_configs:
+      - targets:
+        - postgresql-exporter-primary.apps.openshift4.gnome.org
+        - postgresql-exporter-replica.apps.openshift4.gnome.org
