--- a/roles/nsd/templates/zones_config.j2
+++ b/roles/nsd/templates/zones_config.j2
@@ -12,7 +12,7 @@ key:
 zone:
   name: "{{ zone.zone_name }}"
   zonefile: "{{ nsd_master_zones_dir }}/{{ zone.zone_name }}"
-{% if is_master|default(false) %}
+{% if is_nsd_master|default(false) %}
 {% for slave in zone.slaves|default([]) %}
   notify: {{ slave.ip }} "{{ slave.tsig_key|default('NOKEY') }}"
   provide-xfr: {{ slave.ip }} "{{ slave.tsig_key|default('NOKEY') }}"
@@ -29,7 +29,7 @@ zone:
 zone:
   name: "{{ zone.zone_name }}"
   zonefile: "{{ nsd_master_zones_dir }}/{{ zone.zone_name }}"
-{% if is_master|default(false) %}
+{% if is_nsd_master|default(false) %}
 {% for slave in zone.slaves|default([]) %}
   notify: {{ slave.ip }} "{{ slave.tsig_key|default('NOKEY') }}"
   provide-xfr: {{ slave.ip }} "{{ slave.tsig_key|default('NOKEY') }}"
