--- a/roles/nrpe/templates/default/check_ntp.cfg.j2
+++ b/roles/nrpe/templates/default/check_ntp.cfg.j2
@@ -1,5 +1,5 @@
 
-{% if ansible_fqdn in groups['osuosl'] %}
+{% if datacenter == 'osuosl' %}
 command[check_ntp_time]=/usr/lib64/nagios/plugins/check_ntp_time -H pool.ntp.org -w 0.1 -c 1
 {% else %}
 command[check_ntp_time]=/usr/lib64/nagios/plugins/check_ntp_time -H guido.osci.io -w 0.1 -c 1
