--- a/roles/base_network/templates/hosts.j2
+++ b/roles/base_network/templates/hosts.j2
@@ -3,11 +3,14 @@
 127.0.0.1		localhost.localdomain localhost
 ::1		        localhost6.localdomain6 localhost6
 
+
+{% if datacenter == 'ral3' %}
 {% if ansible_fqdn in groups['ipaservers'] %}
 {% for host in groups['ipaservers'] %}
 {{ hostvars[host].ansible_eth1.ipv4.address }} {{ hostvars[host].ansible_fqdn }} {{ hostvars[host].ansible_hostname }}
 {% endfor %}
 {% endif %}
-{% if datacenter == 'osuosl' %}
+{% elif datacenter == 'osuosl' %}
 8.43.85.5 vpn.gnome.org
+{% endif %}
 {% endif %}
