--- a/roles/postfix.server/templates/master.cf.j2
+++ b/roles/postfix.server/templates/master.cf.j2
@@ -100,8 +100,7 @@ submission inet n       -       y      -       -       smtpd
 #628      inet  n       -       n       -       -       qmqpd
 pickup    fifo  n       -       n       60      1       pickup
 cleanup   unix  n       -       n       -       0       cleanup
-#qmgr      fifo  n       -       n       300     1       qmgr
-qmgr     fifo  n       -       n       300     1       nqmgr
+qmgr      fifo  n       -       n       300     1        qmgr
 #tlsmgr	  fifo	-	-	n	300	1	tlsmgr
 rewrite   unix  -       -       n       -       -       trivial-rewrite
 bounce    unix  -       -       n       -       0       bounce
