--- a/roles/dovecot/templates/10-ssl.conf.j2
+++ b/roles/dovecot/templates/10-ssl.conf.j2
@@ -5,6 +5,7 @@ ssl_key = <{{ dovecot_ssl_key_path }}
 ssl_prefer_server_ciphers = yes
 ssl_protocols = !SSLv2 !SSLv3 !TLSv1 !TLSv1.1
 ssl_options = no_compression
+ssl_dh_parameters_length = 2048
 
 ssl_cipher_list = EDH+CAMELLIA:EDH+aRSA:EECDH+aRSA+AESGCM:EECDH+aRSA+SHA384:EECDH+aRSA+SHA256:EECDH:+CAMELLIA256:+AES256+CAMELLIA128:+AES128:+SSLv3:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!DSS:!RC4:!SEED:!ECDSA:CAMELLIA256-SHA:AES256-SHA:CAMELLIA128-SHA:AES128-SHA
 {% endif %}
