--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -103,6 +103,7 @@ scrape_configs:
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
+        replacement: 127.0.0.1:9115
 
   - job_name: gitlab_database
     metrics_path: "/database"
