--- a/roles/prometheus/templates/prometheus_blackbox.yml.j2
+++ b/roles/prometheus/templates/prometheus_blackbox.yml.j2
@@ -6,4 +6,4 @@ modules:
       valid_status_codes: [200]
       method: GET
       fail_if_not_ssl: true
-      follow_redirects: false
+      follow_redirects: true
